--- a/client/src/components/questionCard/QuestionCard.css
+++ b/client/src/components/questionCard/QuestionCard.css
@@ -1,17 +1,91 @@
 .questionCard{
+    padding: 16px 32px;
+    border-radius: 6px;
+    border: 0.4px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #F8F8F8;
-    height: 30%;
-    width: 65%;
+    height: fit-content;
+    width: 48%;
 }
-.questionCard-top {
+.questionCardTop {
+    /* margin-top: 5px; */
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.tags{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+.startup-logo {
+    background: url(D:\feedback_feature\client\src\components\static\Frame2211.png);
+    background-size: 100%;
+    width: 55px;
+    height: 55px;
+}
+
+.cardText {
+   
+}
+
+#firstTextP {
+    font-family: 'poppins';
+    line-height: 30px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+#secondTextP {
+    font-family: 'poppins';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+}
+
+.questionCardBottom {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.startup-logo {
-    background: url(D:\feedback_feature\client\src\components\static\Frame2211.png);
+
+.questionViews {
+    display: flex;
+    flex-direction: row;
+    font-family: 'poppins';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px; 
+}
+
+.viewsIcon {
+    margin-right: 5px;
+    background: url(D:\feedback_feature\client\src\components\static\Vector.png);
+    background-size: 100%;
+    height: 13.5px;
+    width: 20px;    
+}
+
+.aboutHow {
+    display: flex;
+    flex-direction: row;
+    font-family: 'poppins';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.iIcon {
+    background: url(D:\feedback_feature\client\src\components\static\mdi_information-outline@2x.png);
+    background-size: 100%;
+    height: 18px;
+    width: 18px;
+    margin-right: 5px;
 }
