--- a/client/src/components/tags/Tag.css
+++ b/client/src/components/tags/Tag.css
@@ -1,5 +1,14 @@
 .questionTag {
     color: black;
-    height: 20px;
-    width: 15px;
+    height: fit-content;
+    width: fit-content;
+    padding: 8px 16px;
+    margin-top: 5px;
+    margin-right: 15px;
+    background-color: #A9D9FF;
+    font-family: 'Inter';
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 24.2px;
+    border-radius: 6px;
 }
