--- a/client/src/components/feedbackPage/Feedback.css
+++ b/client/src/components/feedbackPage/Feedback.css
@@ -1,7 +1,11 @@
 .FeedbackPage {
+    overflow-x: hidden;
+    overflow-y: visible;
     width: 100%;
     height: 100vh;
     background-color: #0F0F0F; 
+    display: flex;
+    flex-direction: column;
 }
 
 .feedbackPageCards {
