--- a/client/src/components/navbarFeedback/navbarFeedback.css
+++ b/client/src/components/navbarFeedback/navbarFeedback.css
@@ -1,15 +1,63 @@
 .navbarFeedback {
+    overflow: hidden;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     height: fit-content;
     width: 100%;
+    padding: 8px 10px;
+    box-shadow: 0pc 0px 10px 0px #FFFFFF40;
 }
 
 .productLogo {
-    background: url(D:\feedback_feature\client\src\components\static\Frame2133.png);
+    background: url(D:\feedback_feature\client\src\components\static\BlackandWhiteLogo.png);
     background-size: 100%;
-    width: 409px;
+    width: 350px;
     height: 49px;
+}
+
+.rightNav{
+    display: flex;
+    flex-direction: row;
+    padding: 16px;
+}
+
+.dropdownImage {
+    background: url(D:\feedback_feature\client\src\components\static\Vector1.png);
+    background-size: 100%;
+    width: 15px;
+    height: 9px;
+    margin-left: 5px;
+}
+.dropdown1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #FEFEFE80;
+    margin-right: 25px;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 29.05px;
+}
+.dropdown2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #FEFEFE80;
+    margin-right: 20px;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 29.05px;
+}
+.profile {
+     display: flex;
+     flex-direction: row;
+     background: url(D:\feedback_feature\client\src\components\static\Ellipse52.png);
+     background-size: 100%;
+     height: 40px;
+     width: 40px;
+     margin-right: 25px;
 }
