--- a/client/src/components/questionCard/QuestionCard.css
+++ b/client/src/components/questionCard/QuestionCard.css
@@ -31,22 +31,20 @@
     height: 55px;
 }
 
-.cardText {
-   
-}
-
 #firstTextP {
     font-family: 'poppins';
-    line-height: 30px;
+    line-height: 27px;
     font-size: 20px;
     font-weight: 500;
+    margin: 10px 0px;   
 }
 
 #secondTextP {
     font-family: 'poppins';
     font-weight: 400;
     font-size: 18px;
-    line-height: 27px;
+    line-height: 25px;
+    margin: 10px 0px;
 }
 
 .questionCardBottom {
@@ -59,27 +57,29 @@
 .questionViews {
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-family: 'poppins';
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px; 
+    line-height: 12px; 
 }
 
 .viewsIcon {
     margin-right: 5px;
     background: url(D:\feedback_feature\client\src\components\static\Vector.png);
     background-size: 100%;
-    height: 13.5px;
+    height: 13px;
     width: 20px;    
 }
 
 .aboutHow {
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-family: 'poppins';
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 12px;
 }
 
 .iIcon {
