--- a/client/src/components/feedbackPage/Feedback.css
+++ b/client/src/components/feedbackPage/Feedback.css
@@ -1,16 +1,21 @@
 .FeedbackPage {
-    overflow-x: hidden;
-    overflow-y: visible;
     width: 100%;
-    height: 100vh;
+    height: fit-content;
     background-color: #0F0F0F; 
     display: flex;
     flex-direction: column;
+    -ms-overflow-style: none;  /* IE and Edge */
+    overflow-y: hidden;
+    scrollbar-width: none;
 }
+.FeedbackPage::-webkit-scrollbar {
+    display: none;
+  }
 
 .feedbackPageCards {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: 20px;
 }
