--- a/client/src/components/answerFilter/AnswerFilter.css
+++ b/client/src/components/answerFilter/AnswerFilter.css
@@ -24,4 +24,13 @@
     padding-right: 5px;
 }
 
+.selectButton {
+    width: 7vw;
+    height: 5vh;
+    font-family: 'poppins';
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+}
+
  
