--- a/client/src/components/fab/Fab.css
+++ b/client/src/components/fab/Fab.css
@@ -16,6 +16,8 @@
 .OptionMenu{
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .XIcon {
