--- a/client/src/components/answerUser/AnswerUser.css
+++ b/client/src/components/answerUser/AnswerUser.css
@@ -12,7 +12,7 @@
 }
 
 .profileImage {
-    background: url(D:\feedback_feature\client\src\components\static\Ellipse52.png);
+    background: url(../static/Ellipse52.png);
     background-size: 100%;
     height: 40px;
     width: 40px; 
