--- a/client/src/components/backToQuestion/BackToQuestion.css
+++ b/client/src/components/backToQuestion/BackToQuestion.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    background: url(D:\feedback_feature\client\src\components\static\Frame65.png);
+    background: url(../static/Frame65.png);
     background-size: 100%;
     height: 32px;
     width: 250px;
