--- a/client/src/components/questionCard/QuestionCard.css
+++ b/client/src/components/questionCard/QuestionCard.css
@@ -25,7 +25,7 @@
     width: 100%;
 }
 .startup-logo {
-    background: url(D:\feedback_feature\client\src\components\static\Frame2211.png);
+    background: url(../static/Frame2211.png);
     background-size: 100%;
     width: 55px;
     height: 55px;
@@ -67,7 +67,7 @@
 
 .viewsIcon {
     margin-right: 5px;
-    background: url(D:\feedback_feature\client\src\components\static\Vector.png);
+    background: url(../static/Vector.png);
     background-size: 100%;
     height: 13px;
     width: 20px;    
@@ -84,7 +84,7 @@
 }
 
 .iIcon {
-    background: url(D:\feedback_feature\client\src\components\static\mdi_information-outline@2x.png);
+    background: url(../static/mdi_information-outline@2x.png);
     background-size: 100%;
     height: 18px;
     width: 18px;
