--- a/client/src/components/fab/Fab.css
+++ b/client/src/components/fab/Fab.css
@@ -13,6 +13,13 @@
     height: 60px;
 }
 
+/* .fabOptions{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+} */
+
 .optionMenu{
     display: flex;
     flex-direction: column;
@@ -24,6 +31,13 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.fabMenuItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: flex-end;
 }
 
